mysite/docs/老李k8s笔记/k8s学习/实战篇-K8s部署前后端分离的项目/YAML/myappingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
spec:
  ingressClassName: nginx
  # 1.路由规则
  rules:
      # 2.自定义域名
    - host: www.myapp.com
      http:
        # 3.域名下的具体路径
        paths:
          - path: / 
            backend:
              service:              
                # 前端service名字
                name: myappfrontend-service
                # 前端service端口
                port: 
                  number: 80
            # 路径匹配类型      
            pathType: Prefix
